Adjusting support for Ubuntu and Fedora

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,7 +3,7 @@
   hosts: all
   pre_tasks:
     - name: import test vars
-      include_vars: vars/test.yml
+      ansible.builtin.include_vars: vars/test.yml
 
   roles:
-    - name: guidugli.postfix
+    - guidugli.postfix
