--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,9 +2,9 @@
 # handlers file for postfix
 
 - name: run postmap
-  command: "postmap {{ pf_smtp_sasl_password_maps }}"
+  ansible.builtin.command: "postmap {{ pf_smtp_sasl_password_maps }}"
 
 - name: restart postfix
-  service:
+  ansible.builtin.service:
     name: "{{ pf_service_name }}"
     state: restarted
