--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for postfix
 
 - name: include assert.yml
-  include_tasks: assert.yml
+  ansible.builtin.include_tasks: assert.yml
 
 - name: include postfix.yml
-  include_tasks: postfix.yml
+  ansible.builtin.include_tasks: postfix.yml
