--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 # tasks file for postfix
 
-- name: include assert.yml
+- name: Include assert.yml
   ansible.builtin.include_tasks: assert.yml
 
-- name: include postfix.yml
+- name: Include postfix.yml
   ansible.builtin.include_tasks: postfix.yml
