--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,6 +3,7 @@
 
 - name: Run postmap
   ansible.builtin.command: "postmap {{ pf_smtp_sasl_password_maps }}"
+  changed_when: true
 
 - name: Restart postfix
   ansible.builtin.service:
