--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,27 +1,20 @@
 ---
+role_name_check: 1
 dependency:
   name: galaxy
 driver:
   name: ${MDRIVER:-podman}
 platforms:
   - name: instance
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest
-    privileged: true
-    tmpfs:
-      - /run
-      - /tmp
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    image: docker.io/geerlingguy/docker-${MOLECULE_DISTRO:-fedora42}-ansible:latest
     command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    privileged: true
     pre_build_image: true
 provisioner:
   name: ansible
-  config_options:
-    defaults:
-      interpreter_python: auto_silent
-      callback_whitelist: profile_tasks, timer, yaml
-    ssh_connection:
-      pipelining: false
 verifier:
   name: ansible
 lint: |
