--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,6 @@
 
 - name: Include postfix.yml
   ansible.builtin.include_tasks: postfix.yml
+
+- name: Include aliases.yml
+  ansible.builtin.include_tasks: aliases.yml
