--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,16 @@
 ---
 # tasks file for postfix
 
-- name: Include assert.yml
-  ansible.builtin.include_tasks: assert.yml
+- name: Execute role tasks
+  block:
 
-- name: Include postfix.yml
-  ansible.builtin.include_tasks: postfix.yml
+    - name: Include assert.yml
+      ansible.builtin.include_tasks: assert.yml
+    
+    - name: Include postfix.yml
+      ansible.builtin.include_tasks: postfix.yml
+    
+    - name: Include aliases.yml
+      ansible.builtin.include_tasks: aliases.yml
 
-- name: Include aliases.yml
-  ansible.builtin.include_tasks: aliases.yml
+  become: yes
